<resources>
    <string name="app_name">AAC-Tech</string>
    <string name="homescreenB1">paramedic</string>
    <string name="homescreenB2">client</string>
    <string name="patientB1">Call Now!</string>
    <string name="homescreenI1"></string>
    <string name="homescreenI2"></string>
    <string name="patientI1"></string>
    <string name="parmadicscreenT1">Waiting for a call!</string>
    <string name="paramedSignIn">Paramedic Sign in:</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="signin">sign in</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="hosp1">
        <item name="id">1</item>
        <item name="loc_lat">43.657735</item>
        <item name="loc_long"> -79.390434</item>
        <item name="name">Mount Sinai Toronto Hospital</item>
        <item name="street">600 University Avenue</item>
        <item name="city">Toronto</item>
        <item name="province">ON</item>
        <item name="zip">M5G1X5</item>
    </string-array>
    <string-array name="hosp2">
        <item name="id">2</item>
        <item name="loc_lat">43.729488</item>
        <item name="loc_long">-79.598050</item>
        <item name="name">William Osler Health System -
            Etobicoke General Hospital</item>
        <item name="street">Humber College Blvd</item>
        <item name="city">Etobicoke</item>
        <item name="province">ON</item>
        <item name="zip">M9V5B5</item>
    </string-array>
    <string-array name="hosp3">
        <item name="id">3</item>
        <item name="loc_lat">43.262312</item>
        <item name="loc_long">-79.854611</item>
        <item name="name">Hamilton General Hospital</item>
        <item name="street">237 Barton St E</item>
        <item name="city">Hamilton</item>
        <item name="province">ON</item>
        <item name="zip">L8L2X2</item>
    </string-array>
    <string-array name="hosp4">
        <item name="id">4</item>
        <item name="loc_lat">43.746405</item>
        <item name="loc_long">-79.743845</item>
        <item name="name">Brampton Civic Hospital</item>
        <item name="street">2100 Bovaird Dr E</item>
        <item name="city">Brampton</item>
        <item name="province">ON</item>
        <item name="zip">L6R3J7</item>
    </string-array>
    <string-array name="hosp5">
        <item name="id">5</item>
        <item name="loc_lat">45.402720</item>
        <item name="loc_long">-75.649275</item>
        <item name="name">Ottawa Hospital Civic Campus</item>
        <item name="street">1053 Carling Ave</item>
        <item name="city">Ottawa</item>
        <item name="province">ON</item>
        <item name="zip">K1Y4E9</item>
    </string-array>
    <string name="title_activity_options_navigation">optionsNavigation</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">maps</string>
    <string name="title_notifications">history</string>
    <string name="signout">Sign out</string>
    <string name="update">Update Info</string>
    <string name="activity">View Activity</string>
    <string name="settings">Settings</string>
    <string name="mymenu">MENU</string>
    <string name="start">start</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="client">Client Name</string>
    <string name="emergency">Emergency</string>
    <string name="emerg_address">Address</string>
    <string name="client_address">Client Home address</string>
    <string name="client_contact">Client tel</string>
    <string name="paraName">Name:</string>
    <string name="status">Status:</string>
    <string name="hospital">Hospital:     </string>
    <string name="para_address">Address:</string>
    <string name="hosp_address">Address:    :</string>
    <string name="credentials">Send Your Info</string>
    <string name="updateInfo">Update Your Info</string>
    <string name="maps">Go to Maps</string>
    <string name="submit">send</string>
    <string name="addressinfo">Your Address Info:</string>
    <string name="City">City</string>
    <string name="ZIP">Postal Code</string>
    <string name="street">Street</string>
    <string name="contact">Contact</string>
    <string name="province">Province</string>


</resources>
