<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/credentials" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/updateInfo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        android:checkableBehavior="single"
    </group>
</menu>
