<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/homescreenB1"
        android:layout_width="199dp"
        android:layout_height="28dp"
        android:background="@color/Button"
        android:outlineAmbientShadowColor="@color/Button"
        android:text="@string/homescreenB1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/homescreenB2"
        android:layout_width="207dp"
        android:layout_height="25dp"
        android:background="@color/Button"
        android:text="@string/homescreenB2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839" />

    <ImageView
        android:id="@+id/homescreenI1"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:text="@string/homescreenI1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:srcCompat="@drawable/homescreen1" />

    <ImageView
        android:id="@+id/homescreenI2"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:text="@string/homescreenI2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/homescreen2" />

</androidx.constraintlayout.widget.ConstraintLayout>